--- a/WpfApp/App.config
+++ b/WpfApp/App.config
@@ -15,11 +15,13 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IService1" />
+        <binding name="BasicHttpBinding_IDeliveryService" />
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:8733/Design_Time_Addresses/Service/Service1/" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService1" contract="ServiceReference1.IService1" name="BasicHttpBinding_IService1" />
+      <endpoint address="http://localhost:8733/Design_Time_Addresses/Service/Service1/"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IDeliveryService"
+        contract="DeliveryService.IDeliveryService" name="BasicHttpBinding_IDeliveryService" />
     </client>
   </system.serviceModel>
   <entityFramework>
